# repo-cloner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SetupProj.bat  SetupProj.sh  TODO.txt  get_spec.py  main.py  pyproject.toml  requirements.txt
